# blis-

./: .gitignore  LICENSE  Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
include/: blis++.hpp  blis++_config.h.in  blis++_matrix.hpp  blis++_memory.hpp  blis++_scalar.hpp
include/blis++/: blis++.hpp  blis++_matrix.hpp  blis++_memory.hpp  blis++_partition.hpp  blis++_scalar.hpp  blis++_vector.hpp
m4/: aq_with_package.m4
profile/: profile_knl.cxx
